# simple_mp

./: .clang-format  CMakeLists.txt  readme.md
include/simple/: mp.hpp
include/simple/mp/: algorithms.hpp  bind.hpp  invoke_with_index.hpp  list.hpp  map.hpp  numeric_constants.hpp  type_name.hpp  utility.hpp
include/simple/mp/detail/: config.hpp  m_at_impl.hpp  m_indexed_invoke.hpp  m_indexed_vtable_invoke.hpp
include/smp/: smp.hpp
test/: CMakeLists.txt  smp_tests.cpp
